Update and rename Shift work calendar year at a glance1.htm to index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ href="Shift%20work%20calendar%20year%20at%20a%20glance1_files/filelist.xml">
  var c_lTabs=2;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Shift Work Calendar";
- c_rgszSh[1] = "Shift Pattern";
+ c_rgszSh[0] = "ShiftÂ WorkÂ Calendar";
+ c_rgszSh[1] = "ShiftÂ Pattern";
 
 
 
